--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,8 +9,11 @@
 <body>
     <h1> <%= campground.title %> </h1>
     <h2> <%= campground.location %> </h2>
+    <a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
+    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+        <button>Delete</button>
+    </form>
     <footer>
-        <a href="/campgrounds/<%= campground._id %>/edit">Edit Campground</a>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
 </body>
